--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -42,4 +47,8 @@ h1 {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.full-height {
+  height: 100vh;
 }
